--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -7,12 +7,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Conversations">
+    tools:context="com.yacht.bootcamp.gibberish.HelperClasses.Activities.Messages">
 
     <ListView
-        android:id="@+id/conversationListView"
+        android:id="@+id/messageListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     </ListView>
-
 </LinearLayout>
