--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -32,7 +32,8 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/messageListView"
+        android:id="@+id/lvMessages"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent">
+        </ListView>
 </LinearLayout>
