--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.yacht.bootcamp.gibberish.HelperClasses.Activities.ComposeActivity">
+    tools:context="com.yacht.bootcamp.gibberish.Activities.ComposeActivity">
 
     <LinearLayout
         android:orientation="horizontal"
