--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -8,7 +8,7 @@
     android:paddingTop="150dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.yacht.bootcamp.gibberish.HelperClasses.Activities.Login_Activity">
+    tools:context="com.yacht.bootcamp.gibberish.Activities.Login_Activity">
 
     <EditText
         android:id="@+id/etLogin"
