--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.yacht.bootcamp.gibberish.HelperClasses.Activities.SettingsActivity">
+    tools:context="com.yacht.bootcamp.gibberish.Activities.SettingsActivity">
 
     <TextView
         android:textSize="17sp"
