Several small issues fixed

--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -16,6 +16,7 @@
 
         <EditText
             android:id="@+id/etMessage"
+            android:capitalize="sentences"
             android:layout_width="fill_parent"
             android:layout_weight="1"
             android:layout_height="match_parent"
