--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -16,6 +16,7 @@
         <EditText
             android:id="@+id/etComposeContact"
             android:hint="@string/recipient"
+            android:capitalize="words"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
@@ -29,6 +30,7 @@
     <EditText
         android:hint="@string/msgText"
         android:id="@+id/etComposeMessage"
+        android:capitalize="sentences"
         android:gravity="top"
         android:layout_weight="1"
         android:layout_width="match_parent"
