--- a/app/src/main/res/layout/activity_login_.xml
+++ b/app/src/main/res/layout/activity_login_.xml
@@ -13,6 +13,7 @@
     <EditText
         android:id="@+id/etLogin"
         android:hint="@string/tfLoginName"
+        android:capitalize="words"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
